Handling User Interaction

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>Take notes & never forget</h2>
     <p>This application was created by me</p>
     <p>Some text note</p>
+    <button>Create Note</button>
     <script src="./notes-app.js"></script>
   </body>
 </html>
