--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <body>
     <h1>Notes App</h1>
     <h2>Take notes & never forget</h2>
-    <p>This application was created by me</p>
-    <p>Some text note</p>
-    <button>Create Note</button>
+    <p class="note">This application was created by me</p>
+    <p class="note">Some text note</p>
+    <button id="create-note">Create Note</button>
+    <button id="remove-note">Remove all notes</button>
     <script src="./notes-app.js"></script>
   </body>
 </html>
