--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <h1>Notes App</h1>
     <h2>Take notes & never forget</h2>
-    <p class="note">This application was created by me</p>
-    <p class="note">Some text note</p>
+    <input type="text" name="" id="search-text" placeholder="Filter Notes" />
+    <div id="notes"></div>
     <button id="create-note">Create Note</button>
     <button id="remove-note">Remove all notes</button>
     <script src="./notes-app.js"></script>
