--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <input type="text" name="" id="search-text" placeholder="Filter Notes" />
     <div id="notes"></div>
     <button id="create-note">Create Note</button>
-    <button id="remove-note">Remove all notes</button>
+    <form action="" id="name-form">
+      <input type="text" name="firstName" id="" placeholder="First Name" />
+      <button>Submit</button>
+    </form>
     <script src="./notes-app.js"></script>
   </body>
 </html>
+
+<!-- //input field inside of form contains 'name' field written in cammel casing format -->
