--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   <body>
     <h1>Notes App</h1>
     <h2>Take notes & never forget</h2>
-    <input type="text" name="" id="search-text" placeholder="Filter Notes" />
+    <input type="text" id="search-text" placeholder="Filter Notes" />
+    <!-- create dropdown -->
+    <select id="filter-by">
+      <option value="byEdited">Sort By Last Edited</option>
+      <option value="byCreated">Sort By recently Created</option>
+      <option value="byAlphabetical">Sort Alphabetically</option>
+    </select>
     <div id="notes"></div>
     <button id="create-note">Create Note</button>
-    <form action="" id="name-form">
-      <input type="text" name="firstName" id="" placeholder="First Name" />
-      <button>Submit</button>
-    </form>
     <script src="./notes-app.js"></script>
   </body>
 </html>
