--- a/edit.html
+++ b/edit.html
@@ -9,8 +9,11 @@
   <body>
       <a href="/index.html">Home</a>
     <input  id="note-title" placeholder="Note Title">
+    <!-- How long ago the note is updated -->
+    <span id="last-edited"></span>
     <textarea name="" id="note-body" cols="30" rows="10" placeholder="Enter Note Text"></textarea>
     <button id="remove-note">Remove Note</button>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src="./notes-functions.js"></script>
     <script src="./notes-edit.js"></script>
 </html>
