Styling the application

--- a/edit.html
+++ b/edit.html
@@ -4,16 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Edit Page</title>
+    <link rel="icon" href="/icon/note.png" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <title>Notes Application</title>
   </head>
   <body>
-      <a href="/index.html">Home</a>
-    <input  id="note-title" placeholder="Note Title">
-    <!-- How long ago the note is updated -->
-    <span id="last-edited"></span>
-    <textarea name="" id="note-body" cols="30" rows="10" placeholder="Enter Note Text"></textarea>
-    <button id="remove-note">Remove Note</button>
+    <div class="header">
+      <div class="container">
+        <h1 class="header__title">Notes App</h1>
+        <h2 class="header__subtitle">Take notes & never forget</h2>
+      </div>
+    </div>
+    <div class="actions">
+      <div class="actions__container actions__container--spaced">
+          <a href="/index.html">Home</a>
+          <span id="last-edited"></span>
+      </div>
+    </div>
+    <div class="container">
+        <input id="note-title" class="title-input" placeholder="Note Title (Auto-save)">
+        <!-- How long ago the note is updated -->
+        <textarea name="" id="note-body" class="body-input" cols="30" rows="10" placeholder="Enter Note Text (Auto-save)"></textarea>
+        <button id="remove-note" class="button button--secondary">Remove Note</button>
+    </div>
+      
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
-    <script src="./notes-functions.js"></script>
-    <script src="./notes-edit.js"></script>
+    <script src="./scripts/notes-functions.js"></script>
+    <script src="./scripts/notes-edit.js"></script>
 </html>
