--- a/public/edit.html
+++ b/public/edit.html
@@ -27,9 +27,5 @@
         <textarea name="" id="note-body" class="body-input" cols="30" rows="10" placeholder="Enter Note Text (Auto-save)"></textarea>
         <button id="remove-note" class="button button--secondary">Remove Note</button>
     </div>
-      
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
-    <script src="./scripts/notes-functions.js"></script>
-    <script src="./scripts/notes-edit.js"></script>
+    <script src="./scripts/edit-bundle.js"></script>
 </html>
